--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,25 +11,18 @@ services:
       - ./settings.conf:/settings.conf
     networks:
       - bum_backend_net
+    ports:
+      - 1234:5432
 
   pgadmin:
     image: dpage/pgadmin4:9.0
     depends_on:
       - postgres
     env_file: settings.conf
-    environment:
-      PGADMIN_LISTEN_PORT: 3000
     volumes:
       - ./pgadmin4/servers.json:/pgadmin4/servers.json
       - ./settings.conf:/settings.conf
     networks:
       - bum_backend_net
-
-  nginx:
-    image: nginx:1.17.4
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      - bum_backend_net
     ports:
-      - 80:80
+      - 3000:80
