#12 - Изменил ci/cd. Добавил docker-compose для сборки

--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -8,7 +8,7 @@ jobs:
       
       - name: Building
         run: |
-          docker compose up --exit-code-from backend
+          docker compose -f ./.github/docker-compose.yml --project-directory ./ up --exit-code-from backend
           if [[ 0 == $? ]]
           then
             echo "TESTS_STATUS=success" >> $GITHUB_ENV
