--- a/src/Web/BUMessenger.Web.Api/appsettings.json
+++ b/src/Web/BUMessenger.Web.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "PostgresConnection": "Host=localhost;Database=your_database;Username=your_user;Password=your_password"
+  }
 }
