#17 - Добавила строку подключения

--- a/src/Web/BUMessenger.Web.Api/appsettings.json
+++ b/src/Web/BUMessenger.Web.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Database=your_database;Username=your_user;Password=your_password"
+    "DefaultConnection": "Host=localhost;Port=1234;Database=bumessenger;Username=postgres;Password=postgres"
   }
 }
