#21 - исправил баг при запросе к pgadmin

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,8 @@ http
 			proxy_no_cache 1;
 			proxy_redirect off;
 			proxy_set_header X-Script-Name /pgadmin;
-			proxy_pass 'http://pgadminHost';
+			proxy_set_header Host $host;
+			proxy_pass http://pgadminHost;
 		}
 	}
 }
