--- a/src/Domain/BUMessenger.Domain.Interfaces/BUMessenger.Domain.Interfaces.csproj
+++ b/src/Domain/BUMessenger.Domain.Interfaces/BUMessenger.Domain.Interfaces.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BUMessenger.Domain.Models\BUMessenger.Domain.Models.csproj" />
+    </ItemGroup>
+
 </Project>
