--- a/src/Web/BUMessenger.Web.Api/BUMessenger.Web.Api.csproj
+++ b/src/Web/BUMessenger.Web.Api/BUMessenger.Web.Api.csproj
@@ -89,6 +89,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\DataAccess\BUMessenger.DataAccess.Context\BUMessenger.DataAccess.Context.csproj" />
+      <ProjectReference Include="..\..\DataAccess\BUMessenger.DataAccess.Repositories\BUMessenger.DataAccess.Repositories.csproj" />
+      <ProjectReference Include="..\..\Domain\BUMessenger.Domain.Interfaces\BUMessenger.Domain.Interfaces.csproj" />
     </ItemGroup>
 
 </Project>
