--- a/src/Web/BUMessenger.Web.Api/appsettings.json
+++ b/src/Web/BUMessenger.Web.Api/appsettings.json
@@ -9,5 +9,15 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=1234;Database=bumessenger;Username=postgres;Password=postgres"
+  },
+
+  "EmailSettings": {
+    "SmtpServer": "mail.etern.su",
+    "Port": 465,
+    "UseSsl": true,
+    "Username": "bumessenger@etern.su",
+    "Password": "bummailbot",
+    "FromName": "BUMessenger",
+    "FromAddress": "bumessenger@etern.su"
   }
 }
