--- a/src/Web/BUMessenger.Web.Api/BUMessenger.Web.Api.csproj
+++ b/src/Web/BUMessenger.Web.Api/BUMessenger.Web.Api.csproj
@@ -88,6 +88,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Application\BUMessenger.Application.Services\BUMessenger.Application.Services.csproj" />
       <ProjectReference Include="..\..\DataAccess\BUMessenger.DataAccess.Context\BUMessenger.DataAccess.Context.csproj" />
       <ProjectReference Include="..\..\DataAccess\BUMessenger.DataAccess.Repositories\BUMessenger.DataAccess.Repositories.csproj" />
       <ProjectReference Include="..\..\Domain\BUMessenger.Domain.Interfaces\BUMessenger.Domain.Interfaces.csproj" />
