#29 - Есть поддержка типа авторизации. Пока только поддержка

--- a/src/Web/BUMessenger.Web.Api/appsettings.json
+++ b/src/Web/BUMessenger.Web.Api/appsettings.json
@@ -11,6 +11,14 @@
     "DefaultConnection": "Host=localhost;Port=1234;Database=bumessenger;Username=postgres;Password=postgres"
   },
 
+  "Jwt": {
+    "Key": "BUMessenger-application-secret-key",
+    "Issuer": "BUMessenger",
+    "Audience": "BUMessenger",
+    "AccessTokenExpiryMinutes": 15,
+    "RefreshTokenExpiryDays": 7
+  },
+  
   "EmailSettings": {
     "SmtpServer": "mail.etern.su",
     "Port": 465,
