--- a/src/Web/BUMessenger.Web.Dto/BUMessenger.Web.Dto.csproj
+++ b/src/Web/BUMessenger.Web.Dto/BUMessenger.Web.Dto.csproj
@@ -10,4 +10,10 @@
       <ProjectReference Include="..\..\Domain\BUMessenger.Domain.Models\BUMessenger.Domain.Models.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Mvc.Core">
+        <HintPath>..\..\..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.13\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
