--- a/src/Web/BUMessenger.Web.Dto/BUMessenger.Web.Dto.csproj
+++ b/src/Web/BUMessenger.Web.Dto/BUMessenger.Web.Dto.csproj
@@ -11,9 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Reference Include="Microsoft.AspNetCore.Mvc.Core">
-        <HintPath>..\..\..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.13\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
-      </Reference>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
     </ItemGroup>
 
 </Project>
