#42 - Добавил сервер и swagger в nginx

--- a/nginx/nginx.stand.conf
+++ b/nginx/nginx.stand.conf
@@ -20,6 +20,11 @@ http
 			proxy_pass http://serverHost;
 		}
 
+		location /swagger
+		{
+			proxy_pass http://serverHost/swagger;
+		}
+
 		location /pgadmin
 		{
 			proxy_no_cache 1;
