--- a/docker-compose.stand.yml
+++ b/docker-compose.stand.yml
@@ -22,6 +22,7 @@ services:
     env_file: settings.conf
     environment:
       DOCKER_CONNECTION_STRING: Host=postgres;Port=5432;Database=bumessenger;Username=postgres;Password=
+      ASPNETCORE_ENVIRONMENT: Development
     depends_on:
       - postgres
     command: bash -c "export DOCKER_CONNECTION_STRING=$${DOCKER_CONNECTION_STRING}$${POSTGRES_PASSWORD};
@@ -48,7 +49,7 @@ services:
       - pgadmin
       - backend
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.stand.conf:/etc/nginx/nginx.conf
     networks:
       - bum_backend_net
     ports:
