--- a/settings.conf
+++ b/settings.conf
@@ -6,3 +6,9 @@ POSTGRES_PASSWORD=postgres
 PGADMIN_DEFAULT_EMAIL=pgadmin@email.com
 ## Пароль
 PGADMIN_DEFAULT_PASSWORD=pass2463FG
+
+# Стенд
+## Логин
+STAND_USERNAME=developer
+##Пароль
+STAND_PASSWORD=standPass532
