--- a/nginx/nginx.stand.conf
+++ b/nginx/nginx.stand.conf
@@ -15,6 +15,8 @@ http
 	server
 	{
 		listen 80;
+		auth_basic "Developer stand";
+		auth_basic_user_file "/app/.htpasswd";
 		location /
 		{
 			proxy_pass http://serverHost;
