#50 - Устранил проблему очистки БД

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
       POSTGRES_USER: postgres
     volumes:
       - ./settings.conf:/settings.conf
+      - /var/lib/postgresql:/var/lib/postgresql
     networks:
       - bum_backend_net
     ports:
