--- a/docker-compose.stand.yml
+++ b/docker-compose.stand.yml
@@ -33,8 +33,9 @@ services:
     environment:
       DOCKER_CONNECTION_STRING: Host=postgres;Port=5432;Database=bumessenger;Username=postgres;Password=
       ASPNETCORE_ENVIRONMENT: Development
-    command: bash -c "export DOCKER_CONNECTION_STRING=$${DOCKER_CONNECTION_STRING}$${POSTGRES_PASSWORD};
-                      ./BUMessenger.Web.Api"
+    command: bash -c "export DOCKER_CONNECTION_STRING=$${DOCKER_CONNECTION_STRING}$${POSTGRES_PASSWORD}; ./BUMessenger.Web.Api"
+    volumes:
+      - ./logs:/app/logs
     networks:
       - bum_backend_net
 
