#63 - Изменил названия и теги контейнеров

--- a/docker-compose.stand.yml
+++ b/docker-compose.stand.yml
@@ -6,6 +6,7 @@ networks:
 services:
   postgres:
     image: postgres:17.4
+    container_name: bumessenger-postgres
     env_file: settings.conf
     environment:
       POSTGRES_DB: bumessenger
@@ -23,12 +24,14 @@ services:
       - bum_backend_net
 
   backend:
+    image: bumessenger-backend:latest
     build:
       context: .
       dockerfile: ./backend.dockerfile
     depends_on:
       postgres:
         condition: service_healthy
+    container_name: bumessenger-backend
     env_file: settings.conf
     environment:
       DOCKER_CONNECTION_STRING: Host=postgres;Port=5432;Database=bumessenger;Username=postgres;Password=
@@ -44,6 +47,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    container_name: bumessenger-pgadmin
     env_file: settings.conf
     ports:
       - 3001:80
@@ -58,6 +62,7 @@ services:
     depends_on:
       - pgadmin
       - backend
+    container_name: bumessenger-nginx
     env_file: settings.conf
     volumes:
       - ./nginx/nginx.stand.conf:/etc/nginx/nginx.conf
