--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,7 @@ networks:
 services:
   postgres:
     image: postgres:17.4
+    container_name: bumessenger-postgres
     env_file: settings.conf
     environment:
       POSTGRES_DB: bumessenger
@@ -22,6 +23,7 @@ services:
     image: dpage/pgadmin4:9.0
     depends_on:
       - postgres
+    container_name: bumessenger-pgadmin
     env_file: settings.conf
     volumes:
       - ./pgadmin4/servers.json:/pgadmin4/servers.json
