--- a/.github/workflows/every-commit-check.yml
+++ b/.github/workflows/every-commit-check.yml
@@ -17,6 +17,7 @@ jobs:
   testing:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4 
       - name: Testing
         run: |
           dotnet test ./src/Tests/BUMessenger.Tests.UnitTests/BUMessenger.Tests.UnitTests.csproj
